# https://doc.rust-lang.org/cargo/reference/manifest.html
# https://crates.io/category_slugs

[package]
name = "jreflection"
version = "0.0.11"
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"
description = "Static reflection APIs for analyzing jars and jimage files"
documentation = "https://docs.rs/jreflection/"
repository = "https://github.com/MaulingMonkey/jreflection"
keywords = ["java", "jvm", "jar", "jimage", "reflection"]
categories = ["parser-implementations"]
license = "MIT OR Apache-2.0"
include = ["/**/*.rs", "/Cargo.toml", "/LICENSE-MIT", "/LICENSE-APACHE"]


[dependencies]
bitflags                = "1.1.0"
bugsalot                = "0.2.0"
jimage                  = "0.2.2"
zip                     = "0.5"
